--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -38,7 +38,7 @@ p{
 }
 
 .sectionSubHeading{
-	color:$title-font-color;
+	color:$section-sub-title-font-color;
 	margin:1rem;
 	text-align: center;
 }
