--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -10,22 +10,38 @@
 		list-style-type: none;
 		width:100%;
 		margin:25px 0;
+		padding:0;
 		li{
-			margin:10px 0;
+			margin:2px 0;
+			@media(min-width:$bp-xsmall){
+				margin:10px 0;
+			}
 		}
 	}
 }
 
 .skillIcon{
 	display: inline-block;
-	font-size: 2rem;
+	font-size: 1rem;
 	color:$main-font-color;
-	width:40px;
+	width:25px;
 	text-align: center;
+	@media(min-width:$bp-xsmall){
+		width:40px;
+		font-size: 2rem;
+	}
 	img{
 		margin:0 auto;
-		width:30px;
+		width:20px;
+		@media(min-width: $bp-xsmall){
+			width:30px
+		}
 	}
+}
+
+.skillLevelDiv{
+	width:75%;
+	display: inline-block;
 }
 
 .skillLevel{
@@ -34,12 +50,14 @@
 	margin:5px;
 	font-size: .75rem;
 	line-height: 1;
-	padding:0 0 2px 10px;
+	padding:0 0 0 2px;
+	
 	border-radius: 25px;
 	/*border-bottom-left-radius: 25px;*/
 	border-right: solid 5px $accent-color;
 	@media(min-width:$bp-xsmall){
 		font-size: 1rem;
+		padding:0 0 2px 10px;
 	}
 }
 
