--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -40,6 +40,7 @@ $btn-font-color:#f26419;  //orange
 $article-bg-color:#14141e;
 $title-bg-color:rgba(36,35,37,.3); //3% of dark grey
 $title-font-color: #f6ae2d; //yellow
+$section-sub-title-font-color:#86bbd8; //lt blue
 $article-title-font:#86bbd8; //lt blue
 $article-font-color:#f6ae2d;
 $white: #fffaff;
